tests/ui/traits/solver-cycles/129541-recursive-enum-and-array-impl.next.stderr
error[E0391]: cycle detected when computing layout of `<[Hello] as Normalize>::Assoc`
  --> $DIR/129541-recursive-enum-and-array-impl.rs:8:5
   |
LL |     type Assoc;
   |     ^^^^^^^^^^
   |
note: ...which requires computing layout of `Hello`...
  --> $DIR/129541-recursive-enum-and-array-impl.rs:21:1
   |
LL | enum Hello {
   | ^^^^^^^^^^
   = note: ...which again requires computing layout of `<[Hello] as Normalize>::Assoc`, completing the cycle
note: cycle used when computing layout of `Hello`
  --> $DIR/129541-recursive-enum-and-array-impl.rs:21:1
   |
LL | enum Hello {
   | ^^^^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0391`.
